--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,10 +12,10 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 }
 
 /* Space out content a bit */
-body {
+/*body {
   padding-top: 20px;
   padding-bottom: 20px;
-}
+}*/
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -27,15 +27,15 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  //border-bottom: 1px solid #e5e5e5;
 
   /* Make the masthead heading the same height as the navigation */
-  h3 {
+  /*h3 {
     margin-top: 0;
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
-  }
+  }*/
 }
 
 /* Custom page footer */
@@ -69,9 +69,9 @@ body {
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
+  /*.container {
     max-width: 730px;
-  }
+  }*/
 
   /* Remove the padding we set earlier */
   .header,
