--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -27,5 +27,49 @@
   .navbar-brand{
     color: #FFFFFF;
   }
+}
+.navbar {
+  &-brand {
+    //the bold style
+    font-weight: bold;
+    color: #000;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    transition: all .2s linear;
+  }
+}
+.navbar-inverse .navbar-brand {
+  color: #000;
+}
 
+//From http://www.bootcss.com/
+@media (min-width: 768px){
+  .navbar {
+    min-height: 40px;
+
+    &-brand {
+      padding-top: 0;
+      padding-bottom: 0;
+      line-height: 42px;
+      height: 42px;
+    }
+
+    &-nav{
+      > li{
+
+        > a{
+          font-size: 14px;
+          padding-top: 11px;
+          padding-bottom: 11px;
+        }
+      }
+    }
+  }
+}
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: transparent;
 }
