--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,16 @@
 $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
+$navbar-inverse-border: #080808;
+
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-@import "header";
+@import "header", "footer";
+
+body{
+  padding-top: 30px;
+}
 
 .browsehappy {
   margin: 0.2em 0;
