--- a/app/styles/blog.scss
+++ b/app/styles/blog.scss
@@ -17,3 +17,81 @@
   -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
 }
+
+.article-author, .article-action{
+  color: #999999;
+  font-size: 12px;
+
+  a{
+    color: #999999;
+  }
+}
+.article-author{
+  margin-bottom: 8px;
+}
+.article-action{
+  margin-top: 15px;
+}
+
+hr.article-split{
+  margin-top: 8px;
+}
+
+.sidebar{
+  .widget{
+    background: #ffffff;
+    //padding: 21px 30px;
+    margin: 20px 0;
+  }
+}
+
+.widget{
+  .title {
+    margin-top: 0;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #ebebeb;
+    margin-bottom: 21px;
+    position: relative;
+
+    &:after {
+      content: "";
+      width: 90px;
+      height: 1px;
+      background: #e67e22;
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+    }
+  }
+  .content{
+
+  }
+
+  .tag-cloud a {
+    border: 1px solid #ebebeb;
+    padding: 2px 7px;
+    color: #959595;
+    line-height: 1.5em;
+    display: inline-block;
+    margin: 0 7px 7px 0;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+  }
+
+  .list-group{
+    &-item{
+      &-heading{
+        font-size: 15px;
+      }
+    }
+  }
+}
+
+.comment{
+  .media{
+    &-body{
+      font-size: 12px;
+    }
+  }
+}
