--- a/app/styles/blog.scss
+++ b/app/styles/blog.scss
@@ -18,6 +18,23 @@
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
 }
 
+.article-list{
+  .media{
+    padding: 8px;
+    color: #666;
+    border: 1px #ffffff solid;
+    background: #ffffff;
+    -webkit-box-shadow: #ececec 0 0 3px;
+    -moz-box-shadow: #ececec 0 0 3px;
+    box-shadow: #ececec 0 0 3px;
+  }
+
+  hr.article-split{
+    margin-top: 8px;
+    display: none;
+  }
+}
+
 .article-author, .article-action{
   color: #999999;
   font-size: 12px;
@@ -32,9 +49,8 @@
 .article-action{
   margin-top: 15px;
 }
-
-hr.article-split{
-  margin-top: 8px;
+.article-content{
+  margin: 30px 0;
 }
 
 .sidebar{
@@ -93,5 +109,21 @@ hr.article-split{
     &-body{
       font-size: 12px;
     }
+  }
+}
+
+aside{
+  &.post-copyright {
+    padding: 12px;
+    background-color: #f9f9f9;
+    overflow: hidden;
+    margin: 12px 0;
+    font-size: 12px;
+  }
+
+  .post-copy {
+    padding-left: 8px;
+    line-height: 24px;
+    width: 100%;
   }
 }
