--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -73,3 +73,18 @@
   color: #fff;
   background-color: transparent;
 }
+
+.navbar-inverse .navbar-nav > .current-menu-item > a,
+.navbar-inverse .navbar-nav > .current-menu-item > a:hover,
+.navbar-inverse .navbar-nav > .current-menu-item > a:focus {
+  color: #fff;
+  background-color: transparent;
+}
+
+.navbar-default .navbar-nav > .current-menu-item > a,
+.navbar-default .navbar-nav > .current-menu-item > a:hover,
+.navbar-default .navbar-nav > .current-menu-item > a:focus {
+  color: #555;
+  background-color: #e7e7e7;
+  //background-color: transparent;
+}
