--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -113,26 +113,6 @@ html,body{
   border-top: 1px solid #555555;
 }
 
-
-.jumbotron{
-  z-index: -3;
-  position: relative;
-  padding: 40px 0;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.4),0 0 30px rgba(0,0,0,.075);
-  background: #020031;
-  background: -moz-linear-gradient(45deg,#020031 0,#6d3353 100%);
-  background: -webkit-gradient(linear,left bottom,right top,color-stop(0%,#020031),color-stop(100%,#6d3353));
-  background: -webkit-linear-gradient(45deg,#020031 0,#6d3353 100%);
-  background: -o-linear-gradient(45deg,#020031 0,#6d3353 100%);
-  background: -ms-linear-gradient(45deg,#020031 0,#6d3353 100%);
-  background: linear-gradient(45deg,#020031 0,#6d3353 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#020031', endColorstr='#6d3353', GradientType=1);
-  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
-  -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
-  box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
-}
 .masthead {
   padding: 60px 0 80px;
   margin-bottom: 0;
@@ -148,6 +128,26 @@ html,body{
     font-size: 18px;
     font-weight: 200;
     line-height: 1.25;
+  }
+
+  &.jumbotron{
+    z-index: -3;
+    position: relative;
+    //padding: 40px 0;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0,0,0,.4),0 0 30px rgba(0,0,0,.075);
+    background: #020031;
+    background: -moz-linear-gradient(45deg,#020031 0,#6d3353 100%);
+    background: -webkit-gradient(linear,left bottom,right top,color-stop(0%,#020031),color-stop(100%,#6d3353));
+    background: -webkit-linear-gradient(45deg,#020031 0,#6d3353 100%);
+    background: -o-linear-gradient(45deg,#020031 0,#6d3353 100%);
+    background: -ms-linear-gradient(45deg,#020031 0,#6d3353 100%);
+    background: linear-gradient(45deg,#020031 0,#6d3353 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#020031', endColorstr='#6d3353', GradientType=1);
+    -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+    -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+    box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
   }
 }
 
