--- a/app/styles/blog.scss
+++ b/app/styles/blog.scss
@@ -57,14 +57,14 @@
 }
 
 .sidebar{
-  .widget{
+  .widget, &-widget{
     background: #ffffff;
     //padding: 21px 30px;
     margin: 20px 0;
   }
 }
 
-.widget{
+.widget, .sidebar-widget{
   .title {
     margin-top: 0;
     padding-bottom: 7px;
@@ -90,6 +90,7 @@
     border: 1px solid #ebebeb;
     padding: 2px 7px;
     color: #959595;
+    font-size: 14px !important;
     line-height: 1.5em;
     display: inline-block;
     margin: 0 7px 7px 0;
