--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,8 +15,8 @@ body{
 
 .box-common{
   padding: 15px;
-  color: #666;
-  border: 1px #ffffff solid;
+  //color: #666;
+  border: 1px #e7e7e7 solid;
   background: #ffffff;
   -webkit-box-shadow: #ececec 0 0 3px;
   -moz-box-shadow: #ececec 0 0 3px;
