--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -43,6 +43,11 @@
   color: #000;
 }
 
+.navbar-inverse {
+  background-color: #282828;
+  border-color: #080808;
+}
+
 //From http://www.bootcss.com/
 @media (min-width: 768px){
   .navbar {
