--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,15 +10,17 @@ $navbar-inverse-border: #080808;
 
 body{
   padding-top: 40px;
-  background-color: #fbfbfb;
+  background-color: #EEEEEE;//#f5f5f5; //#fbfbfb;
 }
 
 .box-common{
   padding: 15px;
+  margin-bottom: 15px;
   //color: #666;
-  border: 1px #e7e7e7 solid;
+  //border: 1px #e7e7e7 solid;
+  border: 1px #dddddd solid;
   background: #ffffff;
-  -webkit-box-shadow: #ececec 0 0 3px;
-  -moz-box-shadow: #ececec 0 0 3px;
-  box-shadow: #ececec 0 0 3px;
+  -webkit-box-shadow: #ececec 0 0 5px; //3px
+  -moz-box-shadow: #ececec 0 0 5px;
+  box-shadow: #ececec 0 0 5px;
 }
