--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,7 +9,8 @@ $navbar-inverse-border: #080808;
 @import "header", "footer", "home", "blog";
 
 body{
-  padding-top: 40px;
+  //padding-top: 40px;
+  border-top: 42px solid #282828;
   background-color: #EEEEEE;//#f5f5f5; //#fbfbfb;
 }
 
@@ -62,4 +63,8 @@ body{
   &:hover .sub-menu{
     display: block;
   }
+}
+
+.screen-reader-text{
+  display: none;
 }
