--- a/app/styles/blog.scss
+++ b/app/styles/blog.scss
@@ -27,9 +27,9 @@
     color: #666;
     border: 1px #dddddd solid;
     background: #ffffff;
-    -webkit-box-shadow: #ececec 0 0 5px;
-    -moz-box-shadow: #ececec 0 0 5px;
-    box-shadow: #ececec 0 0 5px;
+    //-webkit-box-shadow: #ececec 0 0 5px;
+    //-moz-box-shadow: #ececec 0 0 5px;
+    //box-shadow: #ececec 0 0 5px;
   }
 
   hr.article-split{
